package cl.ucn.disc.pa.bibliotech.auth;

public enum LoginAuthState {
    PERMITTED, DENIED
}
