package cl.ucn.disc.pa.bibliotech.book;

public enum TransactionType {
    LEND, RENTED;
}
