package cl.ucn.disc.pa.bibliotech.rented;

public interface RentedBook {

    String getRutSeller();

    String getName();

    String getLastName();

    String getIsbn();

}
